--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -610,7 +610,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>The button title to lead to the share feedback form</comment>
   </data>
   <data name="FeedbackSubtitleText" xml:space="preserve">
-    <value>Provide me feedback by filling the form below and clicking Share Feedback, or submit a ticket in My Service Centre by clicking My Serivce Centre</value>
+    <value>Provide me feedback by filling the form below.\n or \n Submit a ticket in My Service Centre if you are encountering a problem.</value>
     <comment>A quick response message for the sharefeedback form</comment>
   </data>
 </root>
