--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -602,7 +602,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Feedback for App</comment>
   </data>
   <data name="MyServiceCentreButtonText" xml:space="preserve">
-    <value>My Service Centre</value>
+    <value>Open My Service Centre</value>
     <comment>The Title for the Button that Opens My Service Centre</comment>
   </data>
   <data name="DidntAnswerQuestionButtonText" xml:space="preserve">
