--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -202,7 +202,7 @@
     <comment>Action button which gives tour for the team on bot Functionalities.</comment>
   </data>
   <data name="WelcomeTeamCardContent" xml:space="preserve">
-    <value>Hello team,   
+    <value>Hello team,
 
 I am your friendly Q&amp;A bot that helps you provide support to people who interact with me and need more assistance.</value>
     <comment>Welcome message when bot is added to a new team.</comment>
@@ -611,10 +611,34 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
   </data>
   <data name="FeedbackSubtitleText" xml:space="preserve">
     <value>Provide me feedback by filling the form below.
-      
-      or 
-      
+
+      or
+
       Submit a ticket in My Service Centre if you are encountering a problem.</value>
     <comment>A quick response message for the sharefeedback form</comment>
+  </data>
+  <data name="UCBlogTitle" xml:space="preserve">
+    <value>UC Blog Help Site</value>
+    <comment>The title of the UC Blog help site's card on the carousel</comment>
+  </data>
+  <data name="UCBlogBody" xml:space="preserve">
+    <value>The UC Blog Help Site contains all information pertaining to UC. The main topics being Skype, Teams, Meeting Hardware, or Meeting Room Tech.</value>
+    <comment>The body paragraphy of the UC Blog help Site Card in the Teams Help Carousel</comment>
+  </data>
+  <data name="O365HelpTitle" xml:space="preserve">
+    <value>Office 365 Information Centre</value>
+    <comment>The title of the sharepoint help site</comment>
+  </data>
+  <data name="O365HelpBody" xml:space="preserve">
+    <value>The Office 365 Information Centre contains all information pertaining to Office 365. The main topics being Exchange Online, OneDrive, SharePoint Online, and Teams.</value>
+    <comment>The body paragraph of the O365 Information Centre</comment>
+  </data>
+  <data name="ContactUsTitle" xml:space="preserve">
+    <value>Contact Us</value>
+    <comment>The title of the Contact Us card in the Teams Help Carousel</comment>
+  </data>
+  <data name="ContactUsBody" xml:space="preserve">
+    <value>If you have encountered a problem and require a technician, this support page provides you with options on how to reach us</value>
+    <comment>The body of the Contact Us card in the Teams Help Carousel</comment>
   </data>
 </root>
